Added Origins fabric as a dependency (modImplementation but still need to figure out what the difference is)

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,17 @@ repositories {
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
 	maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
+	maven { url 'https://jitpack.io' }
+
+	// for origins
+	maven { name = "Ladysnake Libs"
+		url = 'https://ladysnake.jfrog.io/artifactory/mods' }
+	maven { url = 'https://maven.cafeteria.dev'
+		content { includeGroup 'net.adriantodt.fabricmc' } }
+	maven { url "https://maven.jamieswhiteshirt.com/libs-release"
+		content { includeGroup "com.jamieswhiteshirt" } }
+	maven { url "https://maven.shedaniel.me/" }
+	maven { url "https://maven.terraformersmc.com/" }
 }
 
 dependencies {
@@ -27,7 +38,8 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.18:3.0.38'
+	modImplementation "software.bernie.geckolib:geckolib-fabric-1.18:${geckolib_version}"
+	modImplementation "com.github.apace100:origins-fabric:${origins_version}"
 }
 
 processResources {
