--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ org.gradle.jvmargs=-Xmx1G
 	fabric_version=0.51.1+1.18.2
 	geckolib_version=3.0.38
 	origins_version=1.4.1
+	botania_version=1.18.2-431-FABRIC
