--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,8 @@ org.gradle.jvmargs=-Xmx1G
 	geckolib_version=3.0.38
 	origins_version=1.4.1
 	botania_version=1.18.2-431-FABRIC
+	modern_industrialization_version=1.1.0-alpha.01
+	rei_version=8.1.449
+	magna_version=1.7.0-1.18
+	arrp_version=0.+
+	team_reborn_energy_version=2.2.0
