--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,6 @@ org.gradle.jvmargs=-Xmx1G
 	magna_version=1.7.0-1.18
 	arrp_version=0.+
 	team_reborn_energy_version=2.2.0
+	bewitchment_version=3727852
+	pehkui_version=3.2.2
+	terraform_wood_version=3.0.0
