--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,4 @@ org.gradle.jvmargs=-Xmx1G
 	bewitchment_version=3727852
 	pehkui_version=3.2.2
 	terraform_wood_version=3.0.0
+	customportalapi_version=0.0.1-beta50-1.18
