Added power TrinketStarterEquipment, used by mechanical_wings_starterpack.json

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation "software.bernie.geckolib:geckolib-fabric-1.18:${geckolib_version}"
+	modImplementation "dev.emi:trinkets:${trinkets_version}"
 	modImplementation "com.github.apace100:origins-fabric:${origins_version}"
 	modImplementation "net.kyrptonaught:customportalapi:${customportalapi_version}"
 	include "net.kyrptonaught:customportalapi:${customportalapi_version}"
