--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,4 @@ org.gradle.jvmargs=-Xmx1G
 	pehkui_version=3.2.2
 	terraform_wood_version=3.0.0
 	customportalapi_version=0.0.1-beta50-1.18
+	trinkets_version=3.3.0
