--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
 		url = uri("https://storage.googleapis.com/devan-maven/")
 	}
 	// for origins
-	maven { url 'https://jitpack.io' }
+
 	maven { name = "Ladysnake Libs"
 		url = 'https://ladysnake.jfrog.io/artifactory/mods' }
 	maven { url = 'https://maven.cafeteria.dev'
@@ -44,7 +44,7 @@ repositories {
 	// for bewitchment
 //	maven { url "https://cursemaven.com"
 //		content { includeGroup "curse.maven" } }
-
+	maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -70,6 +70,9 @@ dependencies {
 	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${rei_version}"
 	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}"
 	modRuntimeOnly "maven.modrinth:modern-industrialization:${modern_industrialization_version}"
+
+
+	modImplementation "com.github.zombifiedpotato:extra_origin_powers:1.0.0"
 	// for bewitchment
 //	modApi("com.github.Virtuoel:Pehkui:${pehkui_version}", {
 //		exclude group: "net.fabricmc.fabric-api"
