--- a/build.gradle
+++ b/build.gradle
@@ -16,35 +16,14 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
-	maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
-	maven { url = "https://maven.kyrptonaught.dev"	}
-	// for modern industrialization
-	maven { name = "Modrinth"
-		url = "https://api.modrinth.com/maven"
-		content { includeGroup "maven.modrinth" } }
-	maven {
-		url = uri("https://storage.googleapis.com/devan-maven/")
-	}
-	// for origins
-
-	maven { name = "Ladysnake Libs"
-		url = 'https://ladysnake.jfrog.io/artifactory/mods' }
-	maven { url = 'https://maven.cafeteria.dev'
-		content { includeGroup 'net.adriantodt.fabricmc' } }
 	maven { url "https://maven.jamieswhiteshirt.com/libs-release"
 		content { includeGroup "com.jamieswhiteshirt" } }
+	maven { name = "Ladysnake Libs"
+		url = 'https://ladysnake.jfrog.io/artifactory/mods' }
 	maven { url "https://maven.shedaniel.me/" }
 	maven { name = 'TerraformersMC'
 		url = 'https://maven.terraformersmc.com/' }
-	// for botania
-	maven { name = "Jared"
-		url = uri("https://maven.blamejared.com/")
-		content { includeGroup("vazkii.botania")
-			includeGroup("vazkii.patchouli") } }
-	// for bewitchment
-//	maven { url "https://cursemaven.com"
-//		content { includeGroup "curse.maven" } }
-	maven { url 'https://jitpack.io' }
+	maven { url = "https://jitpack.io" }
 }
 
 dependencies {
@@ -55,32 +34,10 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modImplementation "software.bernie.geckolib:geckolib-fabric-1.18:${geckolib_version}"
-	modImplementation "dev.emi:trinkets:${trinkets_version}"
-	modImplementation "com.github.apace100:origins-fabric:${origins_version}"
-	modImplementation "net.kyrptonaught:customportalapi:${customportalapi_version}"
-	include "net.kyrptonaught:customportalapi:${customportalapi_version}"
-
-	// for botania
-	modRuntimeOnly "vazkii.botania:Botania:${botania_version}"
-	// for modern industrialization
-	include modApi("teamreborn:energy:${team_reborn_energy_version}") { exclude(group: "net.fabricmc.fabric-api") }
-	modRuntimeOnly "com.github.Draylar:magna:${magna_version}"
-	modRuntimeOnly("net.devtech:arrp:${arrp_version}")
-	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${rei_version}"
-	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}"
-	modRuntimeOnly "maven.modrinth:modern-industrialization:${modern_industrialization_version}"
-
-
-	modImplementation "com.github.zombifiedpotato:extra_origin_powers:1.0.0"
-	// for bewitchment
-//	modApi("com.github.Virtuoel:Pehkui:${pehkui_version}", {
-//		exclude group: "net.fabricmc.fabric-api"
-//	})
-//	modRuntimeOnly "com.terraformersmc.terraform-api:terraform-wood-api-v1:${terraform_wood_version}"
-//	modRuntimeOnly "curse.maven:bewitchment-394915:${bewitchment_version}"
-
-
+	modApi("com.github.Virtuoel:Pehkui:${pehkui_version}", {
+		exclude group: "net.fabricmc.fabric-api"
+	})
+	modImplementation "com.github.zombifiedpotato:extra_origin_powers:${extra_origin_powers_version}"
 }
 
 processResources {
