--- a/gradle.properties
+++ b/gradle.properties
@@ -4,26 +4,15 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
 	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.3
-	loader_version=0.14.8
+	yarn_mappings=1.18.2+build.4
+	loader_version=0.14.9
 
 # Mod Properties
-	mod_version = 0.1.3-1.18.2
-	maven_group = net.zombified_patato.pumpkin_patch
-	archives_base_name = fabric-zombified_patato-pumpkin_patch
+	mod_version = 1.0.0
+	maven_group = com.github.zombifiedpotato.pumpkin_patch
+	archives_base_name = fabric-zombifiedpotato-pumpkin_patch
 
 # Dependencies
 	fabric_version=0.58.0+1.18.2
-	geckolib_version=3.0.38
-	origins_version=1.4.1
-	botania_version=1.18.2-431-FABRIC
-	modern_industrialization_version=1.1.0-alpha.01
-	rei_version=8.1.449
-	magna_version=1.7.0-1.18
-	arrp_version=0.+
-	team_reborn_energy_version=2.2.0
-	bewitchment_version=3727852
-	pehkui_version=3.2.2
-	terraform_wood_version=3.0.0
-	customportalapi_version=0.0.1-beta50-1.18
-	trinkets_version=3.3.0
+	pehkui_version=3.4.2
+	extra_origin_powers_version=1.0.0
