--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ org.gradle.jvmargs=-Xmx1G
 	fabric_version=0.58.0+1.18.2
 	pehkui_version=3.4.2
 	extra_origin_powers_version=1.0.0
+	fantastical_additions_version=1.0.1
